add timeplus plugin icon and add to feature.xml

--- a/plugins/org.jkiss.dbeaver.ext.timeplus/plugin.xml
+++ b/plugins/org.jkiss.dbeaver.ext.timeplus/plugin.xml
@@ -29,7 +29,7 @@
                     defaultPort="8463"
                     icon="platform:/plugin/org.jkiss.dbeaver.ext.generic/icons/timeplus_icon.png"
                     iconBig="platform:/plugin/org.jkiss.dbeaver.ext.generic/icons/timeplus_icon_big.png"
-                    description="Timplus native JDBC (over TCP)"
+                    description="Timeplus native JDBC (over TCP)"
                     supportedConfigurationTypes="MANUAL,URL"
                     webURL="https://github.com/timeplus-io/timeplus-native-jdbc"
                     databaseDocumentationSuffixURL="Timeplus"
@@ -58,7 +58,7 @@
                         defaultPort="8123"
                         icon="platform:/plugin/org.jkiss.dbeaver.ext.generic/icons/timeplus_icon.png"
                         iconBig="platform:/plugin/org.jkiss.dbeaver.ext.generic/icons/timeplus_icon_big.png"
-                        description="Timplus JDBC (over HTTP)"
+                        description="Timeplus JDBC (over HTTP)"
                         supportedConfigurationTypes="MANUAL,URL"
                         webURL="https://github.com/timeplus-io/proton-java-driver"
                         databaseDocumentationSuffixURL="Timeplus"
