revert change for clickhouse plugin

--- a/plugins/org.jkiss.dbeaver.ext.clickhouse.ui/plugin.xml
+++ b/plugins/org.jkiss.dbeaver.ext.clickhouse.ui/plugin.xml
@@ -4,12 +4,12 @@
 <plugin>
 
     <extension point="org.jkiss.dbeaver.dataManager">
-        <manager class="org.jkiss.dbeaver.ext.clickhouse.ui.TimeplusEnumValueManager" id="org.jkiss.dbeaver.ext.clickhouse.ui.TimeplusEnumValueManager">
+        <manager class="org.jkiss.dbeaver.ext.clickhouse.ui.ClickhouseEnumValueManager" id="org.jkiss.dbeaver.ext.clickhouse.ui.ClickhouseEnumValueManager">
             <supports dataSource="clickhouse" typeName="ENUM8"/>
             <supports dataSource="clickhouse" typeName="ENUM16"/>
         </manager>
     </extension>
     <extension point="org.jkiss.dbeaver.ui.propertyConfigurator">
-        <propertyConfigurator class="org.jkiss.dbeaver.ext.clickhouse.model.TimeplusSSLImpl" uiClass="org.jkiss.dbeaver.ext.clickhouse.ui.TimeplusSSLConfigurator"/>
+        <propertyConfigurator class="org.jkiss.dbeaver.ext.clickhouse.model.ClickhouseSSLImpl" uiClass="org.jkiss.dbeaver.ext.clickhouse.ui.ClickhouseSSLConfigurator"/>
     </extension>
 </plugin>
