--- a/plugins/org.jkiss.dbeaver.ext.clickhouse/plugin.xml
+++ b/plugins/org.jkiss.dbeaver.ext.clickhouse/plugin.xml
@@ -61,6 +61,7 @@
                     categories="sql,analytic,columns"
                     singleConnection="true">
                     <file type="jar" path="maven:/com.clickhouse:clickhouse-jdbc:RELEASE[0.6.1]" load-optional-dependencies="true" bundle="!drivers.clickhouse_com" />
+                    <file type="jar" path="maven:/org.apache.httpcomponents.client5:httpclient5:RELEASE[5.2.3]" bundle="!drivers.clickhouse_com"/>
                     <file type="license" path="https://www.apache.org/licenses/LICENSE-2.0.txt" bundle="!drivers.clickhouse_com"/>
                     <file type="jar" path="drivers/clickhouse_com" bundle="drivers.clickhouse_com"/>
                     <file type="license" path="drivers/apache_lic/LICENSE.txt" bundle="drivers.clickhouse_com"/>
